ambassador/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ambassador-ingress
spec:
  backend:
    serviceName: ambassador
    servicePort: 80
